--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Document</title>
 		<link rel="stylesheet" href="style.css" />
-		<link rel="stylesheet" href="scrip.js" />
+		<script src="scrip.js"></script>
 	</head>
 	<body>
 		<div class="conteiner">
