avances con las funciones de suma

--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Document</title>
 		<link rel="stylesheet" href="style.css" />
-		<script src="scrip.js"></script>
+		<script defer src="scrip.js"></script>
 	</head>
 	<body>
 		<div class="conteiner">
 			<div class="display">
 				<p>0.</p>
 			</div>
-			<div class="keybord">
+			<div id="keyboard-id" class="keyboard">
 				<div class="numbers">
 					<button>7</button>
 					<button>8</button>
