avance con la funcion

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 					<button>=</button>
 					<button>.</button>
 				</div>
-				<div class="simbols">
+				<div id="simbols-id" class="simbols">
 					<button>%</button>
 					<button>*</button>
 					<button>-</button>
