solución del problema del display

--- a/index.html
+++ b/index.html
@@ -3,29 +3,30 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Document</title>
+		<title>Calculadora</title>
 		<link rel="stylesheet" href="style.css" />
 		<script defer src="scrip.js"></script>
+		<link rel="shortcut icon" href="https://img.icons8.com/?size=100&id=3qbbkYx6F2FY&format=png&color=000000" />
 	</head>
 	<body>
 		<div class="conteiner">
 			<div class="display">
-				<p>0.</p>
+				<spam>0</spam>
 			</div>
 			<div id="keyboard-id" class="keyboard">
 				<div class="numbers">
-					<button>7</button>
-					<button>8</button>
-					<button>9</button>
-					<button>6</button>
-					<button>5</button>
-					<button>4</button>
-					<button>3</button>
-					<button>2</button>
-					<button>1</button>
-					<button>0</button>
-					<button>=</button>
-					<button>.</button>
+					<button class="number-buttons">8</button>
+					<button class="number-buttons">9</button>
+					<button class="number-buttons">7</button>
+					<button class="number-buttons">6</button>
+					<button class="number-buttons">5</button>
+					<button class="number-buttons">4</button>
+					<button class="number-buttons">3</button>
+					<button class="number-buttons">2</button>
+					<button class="number-buttons">1</button>
+					<button class="number-buttons">0</button>
+					<button class="action-buttons">=</button>
+					<button class="action-buttons">.</button>
 				</div>
 				<div id="simbols-id" class="simbols">
 					<button>%</button>
