--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 	<body>
 		<div class="conteiner">
 			<div class="display">
-				<spam>0</spam>
+				<spam class="display-operator"></spam>
+				<spam class="display-number">0</spam>
 			</div>
 			<div id="keyboard-id" class="keyboard">
 				<div class="numbers">
@@ -32,7 +33,7 @@
 					<button>%</button>
 					<button>*</button>
 					<button>-</button>
-					<button>+</button>
+					<button class="number-buttons">+</button>
 				</div>
 			</div>
 		</div>
