se agregaron los eventos de los operadores de suma resta, multiplicacion y division

--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
 					<button class="action-buttons">=</button>
 					<button class="action-buttons">.</button>
 				</div>
-				<div id="simbols-id" class="simbols">
-					<button>%</button>
-					<button>*</button>
-					<button>-</button>
-					<button class="number-buttons">+</button>
+				<div class="simbols">
+					<button class="operator-button">%</button>
+					<button class="operator-button">*</button>
+					<button class="operator-button">-</button>
+					<button class="operator-button">+</button>
 				</div>
 			</div>
 		</div>
