se creó la función de sumar

--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
 	<body>
 		<div class="conteiner">
 			<div class="display">
-				<spam class="display-operator"></spam>
+				<div>
+					<spam class="display-simbol-operator"></spam>
+					<spam class="display-operator"></spam>
+				</div>
 				<spam class="display-number">0</spam>
 			</div>
 			<div id="keyboard-id" class="keyboard">
@@ -26,14 +29,14 @@
 					<button class="number-buttons">2</button>
 					<button class="number-buttons">1</button>
 					<button class="number-buttons">0</button>
-					<button class="action-buttons">=</button>
+					<button class="equal-button">=</button>
 					<button class="action-buttons">.</button>
 				</div>
 				<div class="simbols">
-					<button class="operator-button">%</button>
-					<button class="operator-button">*</button>
-					<button class="operator-button">-</button>
-					<button class="operator-button">+</button>
+					<button class="division-button">%</button>
+					<button class="multiplication-button">*</button>
+					<button class="subtraction-button">-</button>
+					<button class="addition-button">+</button>
 				</div>
 			</div>
 		</div>
