calculadora terminada faltan corregir pequeños errores en la lógica, se optimizaron algunas lineas de codigo

--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
 					<button class="action-buttons">.</button>
 				</div>
 				<div class="simbols">
-					<button class="division-button">%</button>
-					<button class="multiplication-button">*</button>
-					<button class="subtraction-button">-</button>
-					<button class="addition-button">+</button>
+					<button class="operator-button">/</button>
+					<button class="operator-button">*</button>
+					<button class="operator-button">-</button>
+					<button class="operator-button">+</button>
 				</div>
 			</div>
 		</div>
